Increases the setTimeout() for calculating top margins to avoid gaps between the header, ribbon, and subnavs (fixing regression from merging in develop)

--- a/styleguide/source/_patterns/01-molecules/05-navigation/00-primary-nav/_primary-nav.scss
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/00-primary-nav/_primary-nav.scss
@@ -189,7 +189,7 @@
     justify-content: flex-start;
     flex-direction: row;
     position: absolute;
-    top: 221px;
+    top: 186px;
     left: 0;
     right: 0;
     background: $black-7;
@@ -202,7 +202,7 @@
     @include grid__unit--cols(12.5);
     left: -30px;
     right: -30px;
-    top: 146px;
+    top: 144px;
   }
 }
 
